fix TagOrCycleItemStackTransfer things, add MenuType<ModularUIContainer> for emi